# Learning-Codes

./: .gitignore
C++ Training Course Stuff/C++ Bootcamp/: RGBtoYUV.cpp  Session 1.cpp  Session 2.cpp  Session 3.cpp  a.out  basics.cpp  day4.cpp  even_better.cpp  main.cpp  more_better.cpp  simple_code.cpp  structStuff.cpp
C++ Training Course Stuff/C++ O'Reilly Course/: a.out  basic.cpp  functions.cpp  if-else.cpp  input_checker.cpp  loops.cpp  pointers.cpp
Ramp-Up Tasks/: .gitignore
Ramp-Up Tasks/C Tasks/: CMakeLists.txt  cmdline.c  cmdline.h  comLine  comLine.c  diamondCode.c  diamondCode.h  dynamicStack.c  dynamicStack.h  main_menu.c  math.c  math.h  numbercounter  numbercounter.c  queue.c  queue.h  staticStack.c  staticStack.h  turnonbit  turnonbit.c  turnonbit.h
Ramp-Up Tasks/C++ Thing/: CMakeLists.txt  assignments_roulette  doublyLL.cpp  doublyLL.h  doublycircLL.cpp  doublycircLL.h  dynamicStack.cpp  dynamicStack.h  main.cpp  matrix.cc  matrix.h  outputter.cpp  queue.cpp  queue.h  singlyLL.cpp  singlyLL.h  singlycircLL.cpp  singlycircLL.h  static.cpp  staticStack.cpp  staticStack.h  test_external.cpp
adventOfCode/: a.out  day1.cpp  day1part2.cpp
beginnerCode/: a.out  macexample.c  ndots  task1  task1.c  task2.c  task3  task3.c
beginnerCode/task1.dSYM/Contents/Resources/DWARF/: task1
beginnerCode/task1.dSYM/Contents/Resources/Relocations/aarch64/: task1.yml
beginnerCode/task3.dSYM/Contents/Resources/DWARF/: task3
beginnerCode/task3.dSYM/Contents/Resources/Relocations/aarch64/: task3.yml
